Style: 기존 이미지 삭제 완료